_Added javascript file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span class="text">Hours</span>
         </div>
         <div>
-            <span id="minuts">00</span>
+            <span id="minutes">00</span>
             <span class="text">Minutes</span>
         </div>
         <div>
@@ -23,8 +23,9 @@
             <span class="text">Seconds</span>
         </div>
         <div>
-            <span id="amOrPM">PM</span>
+            <span id="am-pm">PM</span>
         </div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
